Fix for mobile readability on index page

--- a/index.css
+++ b/index.css
@@ -90,7 +90,20 @@ aside{
         padding: 0;
     }
 
-    p {
-        width: auto;
+    body {
+		font-size: 13px;
+        width: 100%;
     }
+
+	p {
+		padding: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	footer {
+		width: 100%;
+		margin:0;
+		padding: 5%;
+	}
 }
